добавлена мобильная адаптация

--- a/src/views/index.twig
+++ b/src/views/index.twig
@@ -18,17 +18,12 @@
     <div class="section main" id="main">
         <div id="scene">
             <img src="/assets/img/grain1.png" data-depth="0.2" alt="" id="grain1">
-            <img src="/assets/img/grain2.png" data-depth="0.3" alt="" id="grain2">
+            <img src="/assets/img/grain2.png" data-depth="-0.3" alt="" id="grain2">
             <img src="/assets/img/grain3.png" data-depth="0.4" alt="" id="grain3">
             <img src="/assets/img/grain4.png" data-depth="0.5" alt="" id="grain4">
-            <img src="/assets/img/grain5.png" data-depth="0.6" alt="" id="grain5">
+            <img src="/assets/img/grain5.png" data-depth="-0.6" alt="" id="grain5">
         </div>
         
-
-        <div class="jam-effect">
-            <div class="waves"></div>
-            <div class="jam"></div>
-        </div>
         <header class="header">
           <div class="container">
             <div class="header__wrapper">
@@ -53,7 +48,7 @@
             <div class="container">
                 <div class="main__wrapper">
                     <div class="main__title title">
-                        <h1 class="title__text">Как понять, что греча твое все?</h1>
+                        <h1 class="title__h1">Как понять, что греча твое все?</h1>
                         <span class="title__description">Укажи, чего ты хочешь <br> и получи подборку блюд из гречи</span>
                     </div>
                     <img src="/assets/img/main__img.png" alt="Гречневые оладьи" class="main__img">
@@ -69,30 +64,75 @@
         </div>
 
     </div>
-    <div class="section" id="wish">
+    <div class="section wish" id="wish">
         <div class="container">
             <div class="wish__wrapper">
-                <div class="wish__title"></div>
-                <div class="wish__form"></div>
+                <div class="wish__title title">
+                    <h2 class="title__h2">Твоя греча</h2>
+                    <span class="title__description">Укажи, чего ты хочешь <br> и получи подборку блюд из гречи</span>
+                </div>
+                <div class="wish__form">
+                    <form class="form" id="form">
+                        <label for="#range__percent" class="form__label">Насколько ты любишь гречку?</label>
+                        <div id="range__percent" class="form__range">
+                            <span class="percent__value">на все 76%</span>
+                        </div>
+
+                        <label for="#range__cook" class="form__label">Время на приготовление</label>
+                        <div id="range__cook" class="form__range">
+                            <span class="cook__value">2 — 30 мин.</span>
+                        </div>
+
+                        <label for="#range__time" class="form__label">Время приема</label>
+                        <div class="form__inner">
+                            <div>
+                                <input type="checkbox" name="time" id="breakfast" class="form__checkbox">
+                                <label for="breakfast" class="form__time">Завтрак</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="time" id="lunch" class="form__checkbox">
+                                <label for="lunch" class="form__time">Обед</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="time" id="dinner" class="form__checkbox">
+                                <label for="dinner" class="form__time">Ужин</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="time" id="night" class="form__checkbox">
+                                <label for="night" class="form__time">Ночной дожор</label>
+                            </div>
+                        </div>
+                        <div class="form__data">
+                            <div>
+                                <label for="name" class="form__label">Имя</label>
+                                <input required type="text" id="name" class="form__input">
+                            </div>
+                            <div>
+                                <label for="phone" class="form__label">Телефон</label>
+                                <input required type="tel" id="phone" class="form__input" placeholder="+ 7 (___) ___-__-__">
+                            </div>
+                        </div>
+                        <button type="submit" class="button form__button">Получить по гречке</button>
+                    </form>
+                    
+                </div>
             </div>
         </div>
         <footer class="footer">
-            <div class="container">
-                <a href="#main" class="footer__logo">
-                    <svg width="120" height="15" viewBox="0 0 120 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M8.56814 6.7033C7.79258 5.9818 6.9025 5.7413 5.85627 5.7413C4.5706 5.7413 3.8575 6.13531 3.8575 6.81076C3.8575 7.51178 4.50294 7.90067 5.90312 7.98766C7.96955 8.12071 10.5877 8.57612 10.5877 11.4365C10.5877 13.3349 9.01058 14.9724 5.87709 14.9724C4.14378 14.9724 2.41047 14.6909 0.8125 13.0535L2.15022 11.1551C2.92578 12.0045 4.70594 12.639 5.92394 12.6595C6.94414 12.6799 7.90189 12.158 7.90189 11.37C7.90189 10.628 7.28248 10.321 5.72614 10.234C3.65971 10.0805 1.19768 9.33855 1.19768 6.89263C1.19768 4.40577 3.81586 3.53076 5.81983 3.53076C7.53232 3.53076 8.81799 3.85825 10.0828 4.94817L8.56814 6.7033Z" fill="white"/>
-                        <path d="M22.8614 9.23615C22.8614 12.337 20.7065 14.8495 17.1513 14.8495C13.5962 14.8495 11.4673 12.337 11.4673 9.23615C11.4673 6.15571 13.6431 3.6228 17.1305 3.6228C20.618 3.6228 22.8614 6.15571 22.8614 9.23615ZM14.1792 9.23615C14.1792 10.8736 15.1786 12.4036 17.1566 12.4036C19.1345 12.4036 20.1339 10.8736 20.1339 9.23615C20.1339 7.61917 18.9783 6.04826 17.1566 6.04826C15.1994 6.04826 14.1792 7.61917 14.1792 9.23615Z" fill="white"/>
-                        <path d="M26.7496 3.87882V9.47681C26.7496 11.1142 27.6605 12.3577 29.3938 12.3577C31.0594 12.3577 32.1941 10.9812 32.1941 9.34377V3.83276L34.88 3.843V14.6296H32.4596L32.2826 13.1662C31.1479 14.2561 30.1069 14.7831 28.5714 14.7831C25.9532 14.7831 24.0429 12.8387 24.0429 9.49728V3.86858L26.7496 3.87882Z" fill="white"/>
-                        <path d="M40.901 0.729736L40.944 3.86338H43.963V6.15579H40.918V10.8071C40.918 11.8357 41.4957 12.3371 42.339 12.3371C42.339 12.3371 43.0312 12.3422 43.7131 12.0915L44.2128 14.2202C44.2128 14.2202 42.9844 14.7114 42.162 14.737C39.7832 14.824 38.2321 13.4936 38.2321 10.8071V6.15579H36.1865V3.86338H38.2321V0.967157L40.901 0.729736Z" fill="white"/>
-                        <path d="M48.533 0V5.30632C49.5116 4.06289 50.7088 3.68935 51.9528 3.68935C55.0603 3.68935 56.4396 5.76174 56.4396 8.92916V14.6039H53.7278V8.94962C53.7278 6.9847 52.6815 6.15574 51.2397 6.15574C49.6417 6.15574 48.5278 7.48616 48.5278 9.10313V14.6039H45.816V0.281435L48.533 0Z" fill="white"/>
-                        <path d="M65.5798 14.6754V8.9086C65.5798 7.49119 64.8251 6.2017 63.3364 6.2017C61.8686 6.2017 61.0045 7.49119 61.0045 8.9086V14.6703H58.2926V3.86324L60.8015 3.88882L60.9993 5.19877C61.5771 4.10885 62.8419 3.71484 63.8882 3.71484C65.1999 3.71484 66.5063 4.23678 67.131 5.72582C68.1095 4.19584 69.3744 3.7609 70.7954 3.7609C73.9028 3.7609 75.4384 5.63883 75.4384 8.86766V14.6754H72.7265V8.86766C72.7265 7.45025 72.1279 6.24776 70.66 6.24776C69.1922 6.24776 68.1303 7.49119 68.1303 8.91371L68.2813 14.6754H65.5798Z" fill="white"/>
-                        <path d="M79.3995 10.1675C79.5764 11.4979 80.7528 12.4599 82.6631 12.4599C83.6625 12.4599 84.9742 12.0863 85.5936 11.4569L87.3269 13.1404C86.1713 14.3173 84.2819 14.8853 82.6162 14.8853C78.8425 14.8853 76.5991 12.5929 76.5991 9.14406C76.5991 5.86919 78.8633 3.51025 82.4184 3.51025C86.0829 3.51025 88.3731 5.73615 87.9463 10.1675H79.3995ZM85.3489 7.96204C85.172 6.5651 84.0633 5.86407 82.5069 5.86407C81.0391 5.86407 79.8419 6.5651 79.4411 7.96204H85.3489Z" fill="white"/>
-                        <path d="M101.068 0V14.609H98.5387L98.3618 13.1251C97.5185 14.4146 96.1652 14.8495 94.8327 14.8495C91.6107 14.8495 89.1903 12.7515 89.1903 9.21571C89.1903 5.50589 91.5691 3.5819 94.765 3.5819C95.9206 3.5819 97.7163 4.19593 98.3618 5.30632V0.286552L101.068 0ZM91.8918 9.21571C91.8918 11.0936 93.2711 12.3831 94.9992 12.3831C96.7117 12.3831 98.1744 11.1602 98.1744 9.21571C98.1744 7.33777 96.7065 6.07387 94.9992 6.07387C93.2711 6.06875 91.8918 7.27125 91.8918 9.21571Z" fill="white"/>
-                        <path d="M106.024 1.55551C106.024 3.62789 102.828 3.62789 102.828 1.55551C102.823 -0.516875 106.024 -0.516875 106.024 1.55551ZM103.067 3.7814V14.5987H105.779V3.79163L103.067 3.7814Z" fill="white"/>
-                        <path d="M116.574 3.82756L119.187 3.84291V14.6091H116.632L116.496 13.0382C115.872 14.3021 114.165 14.9161 112.941 14.9366C109.699 14.957 107.299 12.9921 107.299 9.21576C107.299 5.50594 109.808 3.56148 113.009 3.58195C114.477 3.58195 115.872 4.25739 116.496 5.32684L116.574 3.82756ZM110.016 9.21576C110.016 11.2677 111.458 12.4906 113.259 12.4906C117.522 12.4906 117.522 5.96135 113.259 5.96135C111.458 5.96135 110.016 7.16384 110.016 9.21576Z" fill="white"/>
-                    </svg>
-                </a>
-            </div>
+            <a href="#main" class="footer__logo">
+                <svg width="120" height="15" viewBox="0 0 120 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M8.56814 6.7033C7.79258 5.9818 6.9025 5.7413 5.85627 5.7413C4.5706 5.7413 3.8575 6.13531 3.8575 6.81076C3.8575 7.51178 4.50294 7.90067 5.90312 7.98766C7.96955 8.12071 10.5877 8.57612 10.5877 11.4365C10.5877 13.3349 9.01058 14.9724 5.87709 14.9724C4.14378 14.9724 2.41047 14.6909 0.8125 13.0535L2.15022 11.1551C2.92578 12.0045 4.70594 12.639 5.92394 12.6595C6.94414 12.6799 7.90189 12.158 7.90189 11.37C7.90189 10.628 7.28248 10.321 5.72614 10.234C3.65971 10.0805 1.19768 9.33855 1.19768 6.89263C1.19768 4.40577 3.81586 3.53076 5.81983 3.53076C7.53232 3.53076 8.81799 3.85825 10.0828 4.94817L8.56814 6.7033Z" fill="white"/>
+                    <path d="M22.8614 9.23615C22.8614 12.337 20.7065 14.8495 17.1513 14.8495C13.5962 14.8495 11.4673 12.337 11.4673 9.23615C11.4673 6.15571 13.6431 3.6228 17.1305 3.6228C20.618 3.6228 22.8614 6.15571 22.8614 9.23615ZM14.1792 9.23615C14.1792 10.8736 15.1786 12.4036 17.1566 12.4036C19.1345 12.4036 20.1339 10.8736 20.1339 9.23615C20.1339 7.61917 18.9783 6.04826 17.1566 6.04826C15.1994 6.04826 14.1792 7.61917 14.1792 9.23615Z" fill="white"/>
+                    <path d="M26.7496 3.87882V9.47681C26.7496 11.1142 27.6605 12.3577 29.3938 12.3577C31.0594 12.3577 32.1941 10.9812 32.1941 9.34377V3.83276L34.88 3.843V14.6296H32.4596L32.2826 13.1662C31.1479 14.2561 30.1069 14.7831 28.5714 14.7831C25.9532 14.7831 24.0429 12.8387 24.0429 9.49728V3.86858L26.7496 3.87882Z" fill="white"/>
+                    <path d="M40.901 0.729736L40.944 3.86338H43.963V6.15579H40.918V10.8071C40.918 11.8357 41.4957 12.3371 42.339 12.3371C42.339 12.3371 43.0312 12.3422 43.7131 12.0915L44.2128 14.2202C44.2128 14.2202 42.9844 14.7114 42.162 14.737C39.7832 14.824 38.2321 13.4936 38.2321 10.8071V6.15579H36.1865V3.86338H38.2321V0.967157L40.901 0.729736Z" fill="white"/>
+                    <path d="M48.533 0V5.30632C49.5116 4.06289 50.7088 3.68935 51.9528 3.68935C55.0603 3.68935 56.4396 5.76174 56.4396 8.92916V14.6039H53.7278V8.94962C53.7278 6.9847 52.6815 6.15574 51.2397 6.15574C49.6417 6.15574 48.5278 7.48616 48.5278 9.10313V14.6039H45.816V0.281435L48.533 0Z" fill="white"/>
+                    <path d="M65.5798 14.6754V8.9086C65.5798 7.49119 64.8251 6.2017 63.3364 6.2017C61.8686 6.2017 61.0045 7.49119 61.0045 8.9086V14.6703H58.2926V3.86324L60.8015 3.88882L60.9993 5.19877C61.5771 4.10885 62.8419 3.71484 63.8882 3.71484C65.1999 3.71484 66.5063 4.23678 67.131 5.72582C68.1095 4.19584 69.3744 3.7609 70.7954 3.7609C73.9028 3.7609 75.4384 5.63883 75.4384 8.86766V14.6754H72.7265V8.86766C72.7265 7.45025 72.1279 6.24776 70.66 6.24776C69.1922 6.24776 68.1303 7.49119 68.1303 8.91371L68.2813 14.6754H65.5798Z" fill="white"/>
+                    <path d="M79.3995 10.1675C79.5764 11.4979 80.7528 12.4599 82.6631 12.4599C83.6625 12.4599 84.9742 12.0863 85.5936 11.4569L87.3269 13.1404C86.1713 14.3173 84.2819 14.8853 82.6162 14.8853C78.8425 14.8853 76.5991 12.5929 76.5991 9.14406C76.5991 5.86919 78.8633 3.51025 82.4184 3.51025C86.0829 3.51025 88.3731 5.73615 87.9463 10.1675H79.3995ZM85.3489 7.96204C85.172 6.5651 84.0633 5.86407 82.5069 5.86407C81.0391 5.86407 79.8419 6.5651 79.4411 7.96204H85.3489Z" fill="white"/>
+                    <path d="M101.068 0V14.609H98.5387L98.3618 13.1251C97.5185 14.4146 96.1652 14.8495 94.8327 14.8495C91.6107 14.8495 89.1903 12.7515 89.1903 9.21571C89.1903 5.50589 91.5691 3.5819 94.765 3.5819C95.9206 3.5819 97.7163 4.19593 98.3618 5.30632V0.286552L101.068 0ZM91.8918 9.21571C91.8918 11.0936 93.2711 12.3831 94.9992 12.3831C96.7117 12.3831 98.1744 11.1602 98.1744 9.21571C98.1744 7.33777 96.7065 6.07387 94.9992 6.07387C93.2711 6.06875 91.8918 7.27125 91.8918 9.21571Z" fill="white"/>
+                    <path d="M106.024 1.55551C106.024 3.62789 102.828 3.62789 102.828 1.55551C102.823 -0.516875 106.024 -0.516875 106.024 1.55551ZM103.067 3.7814V14.5987H105.779V3.79163L103.067 3.7814Z" fill="white"/>
+                    <path d="M116.574 3.82756L119.187 3.84291V14.6091H116.632L116.496 13.0382C115.872 14.3021 114.165 14.9161 112.941 14.9366C109.699 14.957 107.299 12.9921 107.299 9.21576C107.299 5.50594 109.808 3.56148 113.009 3.58195C114.477 3.58195 115.872 4.25739 116.496 5.32684L116.574 3.82756ZM110.016 9.21576C110.016 11.2677 111.458 12.4906 113.259 12.4906C117.522 12.4906 117.522 5.96135 113.259 5.96135C111.458 5.96135 110.016 7.16384 110.016 9.21576Z" fill="white"/>
+                </svg>
+            </a>
         </footer>
     </div>
 
