--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -84,8 +84,11 @@
 }
 
 .section {
+  position: relative;
   min-height: 100vh;
+  width: 100%;
 }
+
 
 .main {
   position: relative;
@@ -100,10 +103,13 @@
     align-items: center;
     justify-content: space-between;
     height: 75vh;
+    
   }
 
   &__img {
     transform: rotate(-0.86deg);
+    max-width: 100%;
+    height: auto;
   }
 
   &__start {
@@ -116,7 +122,9 @@
 
 @keyframes change-background {
   0% {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1920' height='3001' preserveAspectRatio='none' viewBox='0 0 1920 3001'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1121%26quot%3b)' fill='none'%3e%3crect width='1920' height='3001' x='0' y='0' fill='rgba(200%2c 210%2c 78%2c 1)'%3e%3c/rect%3e%3cpath d='M 0%2c1573 C 55%2c1380 165%2c590.2 275%2c608 C 385%2c625.8 440%2c1608.2 550%2c1662 C 660%2c1715.8 715%2c643.2 825%2c877 C 935%2c1110.8 990%2c2840.6 1100%2c2831 C 1210%2c2821.4 1265%2c1029.4 1375%2c829 C 1485%2c628.6 1541%2c1776.8 1650%2c1829 C 1759%2c1881.2 1866%2c1237.8 1920%2c1090L1920 3001L0 3001z' fill='rgba(229%2c 229%2c 229%2c 1)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1121'%3e%3crect width='1920' height='3001' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");
+    background-image: url(/assets/img/Background-green.png);
+    background-size: cover;
+    background-repeat: no-repeat;
     background-position: 0px -1500px;
   }
 
@@ -124,16 +132,20 @@
     background-position: 0 0;
   }
 
+  75% {
+    background-position: 0 3000px;
+  }
+
   100% {
-    background-color: $green;
-    background-position: -600px 2000px;
+     background-color: $green;
   }
 
 }
 
 .title {
 
-  &__text {
+  &__h1 {
+    z-index: 3;
     font-family: 'Codec Warm Trial', sans-serif;
     font-weight: 800;
     font-size: 72px;
@@ -141,6 +153,17 @@
     letter-spacing: -0.015em;
     margin-top: 46px;
     margin-bottom: 30px;
+    color: $dark;
+  }
+
+  &__h2 {
+    font-family: 'Codec Warm Trial', sans-serif;
+    font-weight: 800;
+    font-size: 48px;
+    line-height: 52px;
+    letter-spacing: -0.015em;
+    margin-top: 46px;
+    margin-bottom: 38px;
     color: $dark;
   }
 
@@ -210,11 +233,11 @@
 }
 
 .header {
-  padding: 62px 5px 0 5px;
 
   &__wrapper {
     display: flex;
     justify-content: flex-end;
+    padding: 62px 5px 0 5px;
   }
 
   &__logo {
@@ -275,6 +298,248 @@
   margin-top: 39%;
 }
 
+.wish {
+  position: relative;
+
+  &__wrapper {
+    display: flex;
+  }
+
+  &__title {
+    margin-top: 84px;
+    flex: 0.35;
+  }
+
+  &__form {
+    margin-top: 80px;
+    flex: 0.6;
+    width: 100%;
+    min-height: 520px;
+    background-color: #FCF9F0;
+    background-image: url(/assets/img/grain-bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom 55px right;
+    border-radius: 18px;
+    padding-left: 60px;
+    padding-right: 150px;
+    padding-top: 10px;
+  }
+}
+
+.form {
+
+  &__label {
+    display: block;
+    margin-top: 30px;
+    margin-bottom: 18px;
+    font-family: 'Codec Warm Trial', sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 21px;
+    color: $dark;
+  }
+
+  &__range {
+    width: 100%;
+    margin-bottom: 50px;
+  }
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__checkbox {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+
+    + label {
+      display: inline-flex;
+      align-items: center;
+      user-select: none;
+
+      &::before {
+        content: '';
+        display: inline-block;
+        width: 18px;
+        height: 18px;
+        flex-shrink: 0;
+        flex-grow: 0;
+        border: 1px solid #686E29;
+        border-radius: 6px;
+        margin-right: 0.5em;
+        background-color: $light;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: 50% 50%;
+
+        &:hover {
+          background-color: #EFF3D5;
+        }
+      }
+    }
+
+    &:checked {
+
+      + label {
+
+        &::before {
+          background-image: url(/assets/img/checked.png);
+        }
+      }
+    }
+  }
+
+  &__time {
+    font-family: 'Codec Warm Trial', sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 21px;
+  }
+
+  &__data {
+    display: flex;
+    
+    div {
+      margin-right: 28px;
+    }
+  }
+
+  &__input {
+    background: $light;
+    border: 1px solid #BBBBBB;
+    border-radius: 6px;
+    max-width: 222px;
+    width: 100%;
+    height: 40px;
+    outline: none;
+    padding-left: 15px;
+    font-family: sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 21px;
+
+    &::placeholder {
+      font-family: sans-serif;
+      font-weight: 300;
+      font-size: 16px;
+      line-height: 21px;
+      color: #7C7C7C;
+    }
+  }
+
+  &__button {
+    margin-top: 32px;
+  }
+
+}
+
+.percent__value {
+  position: absolute;
+  bottom: -20px;
+  left: 76%;
+  transform: translateX(-50%);
+}
+
+.cook__value {
+  position: absolute;
+  bottom: -20px;
+  left: 25%;
+  transform: translateX(-50%)
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  width: 100%;
+  max-width: 295px;
+  font-family: 'Codec Warm Trial', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+  color: $light;
+  background-color: $orange;
+  border-radius: 47px;
+  border: none;
+  outline: none;
+
+  &:hover,
+  &:active {
+    background-color: #C02300;
+  }
+}
+
+.noUi-base {
+  height: 8px;
+}
+
+.noUi-target {
+  background: transparent;
+  border: none;
+  box-shadow: none;
+}
+
+.noUi-connects {
+  background-image: url(/assets/img/Vector.png);
+  background-repeat: no-repeat;
+  background-size: 100% 3px;
+  background-position: center center;
+}
+
+.noUi-connect {
+  background: $green;
+}
+
+.noUi-handle {
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  background-color: $light;
+  border: 2px solid #686E29;
+  box-shadow: none;
+
+  &:hover {
+    background: #EFF3D5;
+    box-shadow: inset 0px 0px 4px #686E29;
+  }
+
+}
+
+.noUi-handle:after, .noUi-handle:before {
+  content: "";
+  display: none;
+}
+
+.noUi-horizontal .noUi-handle {
+  width: 24px;
+  height: 24px;
+  top:-8px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $dark;
+
+  &__logo {
+    
+    &:hover {
+      path {
+        fill: #4D36F3 !important;
+      }
+    }
+  }
+}
+
 .modal {
   position: fixed;
   z-index: 10;
@@ -326,4 +591,8 @@
   width: 30%;
   visibility: visible;
   transition: width 0.3s ease-in-out;
+}
+
+.error {
+  border: 2px solid $orange;
 }
