изменение в сборке проекта

--- a/src/views/index.twig
+++ b/src/views/index.twig
@@ -17,11 +17,11 @@
     </label>
     <div class="section main" id="main">
         <div id="scene">
-            <img src="/assets/img/grain1.png" data-depth="0.2" alt="" id="grain1">
-            <img src="/assets/img/grain2.png" data-depth="-0.3" alt="" id="grain2">
-            <img src="/assets/img/grain3.png" data-depth="0.4" alt="" id="grain3">
-            <img src="/assets/img/grain4.png" data-depth="0.5" alt="" id="grain4">
-            <img src="/assets/img/grain5.png" data-depth="-0.6" alt="" id="grain5">
+            <img src="./assets/img/grain1.png" data-depth="0.2" alt="" id="grain1">
+            <img src="./assets/img/grain2.png" data-depth="-0.3" alt="" id="grain2">
+            <img src="./assets/img/grain3.png" data-depth="0.4" alt="" id="grain3">
+            <img src="./assets/img/grain4.png" data-depth="0.5" alt="" id="grain4">
+            <img src="./assets/img/grain5.png" data-depth="-0.6" alt="" id="grain5">
         </div>
         
         <header class="header">
@@ -51,7 +51,7 @@
                         <h1 class="title__h1">Как понять, что греча твое все?</h1>
                         <span class="title__description">Укажи, чего ты хочешь <br> и получи подборку блюд из гречи</span>
                     </div>
-                    <img src="/assets/img/main__img.png" alt="Гречневые оладьи" class="main__img">
+                    <img src="./assets/img/main__img.png" alt="Гречневые оладьи" class="main__img">
                 </div>
                 <a href="#wish" class="main__start start">
                     <span class="start__text">Начать!</span>
