--- a/src/views/layout/base.twig
+++ b/src/views/layout/base.twig
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.min.css" integrity="sha512-q54FvbV+gGBn+NvgaD4gpJ7w4wrO00DgW7Rx503PIhrf0CuMwLOwbS+bXgOBFSob+6GVy1HDPfaRLJ8w2jiS4g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="http://fonts.cdnfonts.com/css/codec-warm-trial" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.7.0/nouislider.min.css" integrity="sha512-40vN6DdyQoxRJCw0klEUwZfTTlcwkOLKpP8K8125hy9iF4fi8gPpWZp60qKC6MYAFaond8yQds7cTMVU8eMbgA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/assets/css/main.min.css">
+    <link rel="stylesheet" href="./assets/css/main.min.css">
   {% endblock %}
   {% block styles_page %}{% endblock %}
   {% block scripts_head %}
-    <script src="/assets/js/vendor.min.js"></script>
+    <script src="./assets/js/vendor.min.js"></script>
   {% endblock %}
   {% block scripts_page_head %}{% endblock %}
 {% endblock %}
@@ -35,7 +35,7 @@
     
     {% endblock %}
   {% block scripts %}
-    <script src="/assets/js/main.min.js"></script>
+    <script src="./assets/js/main.min.js"></script>
   {% endblock %}
 </body>
 </html>
